2014-12-10  Corinna Vinschen  <corinna@vinschen.de>

	* winver.rc (LegalCopyright): Fix belatedly (uh-oh).

2014-12-08  Corinna Vinschen  <corinna@vinschen.de>

	* environ.cc (regopt): Remove function.
	(environ_init): Drop undocumented feature to read application-specific
	environment variables from the registry.
	* include/cygwin/version.h (CYGWIN_INFO_PROGRAM_OPTIONS_NAME): Remove.

2014-12-05  Corinna Vinschen  <corinna@vinschen.de>

	* environ.cc (build_env): Remove loquacious debug statements.

2014-12-05  Yaakov Selkowitz  <yselkowitz@cygwin.com>

	* common.din (__bsd_qsort_r): Add.
	(qsort_r): Add.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2014-12-02  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc (create_lock_in_parent): Make lf_obj handle inheritable.
	Explain why.
	(lockf_t::create_lock_obj): Use FALSE, rather than 0 for BOOL argument.
	(lockf_t::del_lock_obj): Check if NtSetEvent succeeded and print system
	message if not.

2014-12-02  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (fetch_windows_home): New function fetching Windows-compliant
	home directory.  Include longish comment to explain what we're doing.
	(cygheap_pwdgrp::get_home): Take additional sid parameter.  In
	NSS_SCHEME_WINDOWS case, call fetch_windows_home to create home
	directory.
	(pwdgrp::fetch_account_from_windows): Call cygheap_pwdgrp::get_home
	with additional sid argument.
	* cygheap.h (cygheap_pwdgrp::get_home): Align declaration to above
	change.

2014-12-02  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (cygheap_user::ontherange): Fix order of fallbacks creating
	HOMEDRIVE/HOMEPATH values to be Windows-compliant.  Add comments.

2014-12-02  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (CreateProfile): Import.
	(LoadUserProfileW): Import.
	* registry.cc (get_registry_hive_path): Move to sec_auth.cc.
	(load_registry_hive): Remove.
	* registry.h (get_registry_hive_path): Drop declaration.
	(load_registry_hive): Ditto.