@@ -524,17 +524,21 @@ warn_msdos (const char *src)
     return;
   tmp_pathbuf tp;
   char *posix_path = tp.c_get ();
-  small_printf ("cygwin warning:\n");
+  small_printf ("Cygwin WARNING:\n");
   if (cygwin_conv_path (CCP_WIN_A_TO_POSIX | CCP_RELATIVE, src,
 			posix_path, NT_MAX_PATH))
-    small_printf ("  MS-DOS style path detected: %ls\n  POSIX equivalent preferred.\n",
+    small_printf (
+"  MS-DOS style path detected: %ls\n  POSIX equivalent preferred.\n",
 		  src);
   else
-    small_printf ("  MS-DOS style path detected: %ls\n  Preferred POSIX equivalent is: %ls\n",
+    small_printf (
+"  MS-DOS style path detected: %ls\n"
+"  Preferred POSIX equivalent is: %ls\n",
 		  src, posix_path);
-  small_printf ("  CYGWIN environment variable option \"nodosfilewarning\" turns off this warning.\n"
-		"  Consult the user's guide for more details about POSIX paths:\n"
-		"    http://cygwin.com/cygwin-ug-net/using.html#using-pathnames\n");
+  small_printf (
+"  CYGWIN environment variable option \"nodosfilewarning\" turns off this\n"
+"  warning.  Consult the user's guide for more details about POSIX paths:\n"
+"  http://cygwin.com/cygwin-ug-net/using.html#using-pathnames\n");
   user_shared->warned_msdos = true;
 }
 
@@ -4204,9 +4208,11 @@ find_fast_cwd ()
      used on the system. */
   fcwd_access_t **f_cwd_ptr = find_fast_cwd_pointer ();
   if (!f_cwd_ptr)
-    system_printf ("WARNING: Couldn't compute FAST_CWD pointer.  "
-		   "Please report this problem to\nthe public mailing "
-		   "list cygwin@cygwin.com");
+    small_printf ("Cygwin WARNING:\n"
+"  Couldn't compute FAST_CWD pointer.  This typically occurs if you're using\n"
+"  an older Cygwin version on a newer Windows.  Please update to the latest\n"
+"  available Cygwin version from https://cygwin.com/.  If the problem persists,\n"
+"  report this problem to the public mailing list cygwin@cygwin.com\n\n");
   if (f_cwd_ptr && *f_cwd_ptr)
     {
       /* Just evaluate structure version. */
