@@ -1,3 +1,9 @@
+2014-12-15  Corinna Vinschen  <corinna@vinschen.de>
+
+	* path.cc (warn_msdos): Slightly reformat.
+	(find_fast_cwd): Change warning message to urge an update before
+	reporting the problem.
+
 2014-12-10  Corinna Vinschen  <corinna@vinschen.de>
 
 	* winver.rc (LegalCopyright): Fix belatedly (uh-oh).
